--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,10 @@ dependencies:
     sdk: flutter
   image_picker: ^0.8.5+3
   permission_handler: ^9.2.0
+  dio: ^4.0.6
+  json_serializable: ^6.2.0
+  motion_toast: ^2.1.6
+  flutter_svg: ^1.0.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -39,8 +43,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   curved_navigation_bar: ^1.0.3
+  build_runner: ^2.1.10
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
