created aboutscreen and saved token to shared pref

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,10 +2,12 @@
     package="com.example.nrental">
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.CAMERA"/>
+    
    <application
         android:label="nrental"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+        <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyBEkTToTl9hL51BmO2EQ7z71ucmRSaS0Ag"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
