--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   mime: ^1.0.2
   google_maps_flutter: ^2.1.8
   shared_preferences: ^2.0.15
+  awesome_notifications: ^0.6.21
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
 
