--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   google_maps_flutter: ^2.1.8
   shared_preferences: ^2.0.15
   awesome_notifications: ^0.6.21
+  wear: ^1.1.0
+  fluttertoast: ^8.0.9
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
 
