--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   awesome_notifications: ^0.6.21
   wear: ^1.1.0
   fluttertoast: ^8.0.9
+  flutter_rating_bar: ^4.0.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
 
