--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   wear: ^1.1.0
   fluttertoast: ^8.0.9
   flutter_rating_bar: ^4.0.1
+  all_sensors2: ^1.0.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
 
