--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   image_picker: ^0.8.5+3
   permission_handler: ^9.2.0
   dio: ^4.0.6
-  json_serializable: ^6.2.0
+  json_serializable: ^4.1.4
   motion_toast: ^2.1.6
   flutter_svg: ^1.0.3
   mime: ^1.0.2
@@ -44,6 +44,9 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   all_sensors2: ^1.0.1
   shake: ^2.1.0
+  api_cache_manager: ^1.0.2
+  dio_http_cache: ^0.3.0
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
 
